# 2022-L3-project-mlp-cpp

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md
.cache/clangd/index/: activation_functions.cpp.8F6C7E43881C6A5B.idx  activation_functions.hpp.A98CBFCA9F7A5F7E.idx  feed_forward.cpp.94FB9BD749D144BF.idx  feed_forward.hpp.273FAA43BC6DD91C.idx  layer.cpp.9AF79B0B72F719A7.idx  layer.hpp.8FD79792AF2FD7AD.idx  main.cpp.F96BEAE8D01787C0.idx  neuron.cpp.F8CBA759FBA376E3.idx  neuron.hpp.2893D3F24C678D40.idx  test_feed_forward.cpp.C5DF84D3FE8F0760.idx  test_layer.cpp.0D6CD34F3BF95F05.idx  test_neuron.cpp.1F09D29274DCCEBB.idx
build_debug/: MachineLearningS6
include/: activ_functions.hpp  activation_functions.hpp  couche.hpp  feed_forward.hpp  layer.hpp  mpc.hpp  neuron.hpp  neurone.hpp
src/: activ_functions.cpp  activation_functions.cpp  couche.cpp  feed_forward.cpp  layer.cpp  main.cpp  neuron.cpp  neurone.cpp
test/: test_neurone.cpp
tests/: test.cpp  test1_neurone.cpp  test2_neurone.cpp  test3_neurone.cpp  test_couche.cpp  test_feed-forward.cpp  test_layer.cpp  test_mpc.cpp  test_neuron.cpp  test_neurone.cpp
